--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header class="header" style="margin-top: 0px;">
             <div class="heading">
-               <h3 style="margin-left: 5px; margin-top: 20px;"><a href="index.html" class="logo">SPARKS DONATION</a></h3></div>
+               <h3 style="margin-left: 5px; margin-top: 20px;"><a href="index.html" class="logo">THE SPARKS DONATION</a></h3></div>
 
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -30,8 +30,12 @@
                 <a href="donate.html">DONATE</a>
             </div>
         </div>
+        <div class="footer">
+            <h3>The Sparks Foundation Internship<br>@Copyright_2022:Krishna Kumar</h3>
+        </div>
         </header>
 
 
-</body>
+
+    </body>
 </html>
