--- a/donate.html
+++ b/donate.html
@@ -27,10 +27,13 @@
             <div class="pattern">
             <div class='welcome' style="position: relative">
             <h3 style="color:deeppink;"> <br>" Donating is a privilege which very less people have "</h3><br><br>
-            <form style="margin-left: 70px;">
+           <!--<form style="margin-left: 70px;">
                
-                <a href="https://rzp.io/l/8Nlu7BaCLY">Pay now</a>
-             </form>
+                <button><a href="https://rzp.io/l/8Nlu7BaCLY">Pay now</a></button>
+             </form>-->
+             <div class="text">
+                 <a href="https://rzp.io/l/8Nlu7BaCLY">PAY NOW</a>
+             </div>
             </div>
         </div>
         
