--- a/about.html
+++ b/about.html
@@ -26,21 +26,7 @@
             <div class="pattern">
                 <div class="welcome" style="position: relative;">
                 <p style="color: white; text-align: center;"> <br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur suscipit tortor id nunc pretium pellentesque.
-                     Vestibulum facilisis turpis ut mauris pretium, eget aliquam odio tempus.
-                     Integer pulvinar, tortor a viverra consequat, elit dolor dapibus nisi, vitae pharetra felis nunc ut magna.
-                     Aliquam erat volutpat. Phasellus tortor dui, sagittis a urna at, cursus consectetur turpis.
-                     Quisque vitae ex luctus, luctus dui posuere, rutrum nisl. Curabitur ac leo augue.
-                    Aliquam ut augue tincidunt, consectetur ipsum ut, porttitor nunc. 
-                    Phasellus ac ipsum at sapien placerat faucibus quis sit amet tellus. 
-                    Integer quis libero accumsan, malesuada erat sed, pharetra dui.
-                    Sed metus massa, commodo gravida auctor fringilla, ullamcorper id diam.
-                    Vivamus ultricies, diam a mattis gravida, metus neque ullamcorper justo, vel ornare risus justo sed augue.
-                    Aliquam ultrices diam id malesuada pharetra. Etiam maximus congue varius.
-                    Fusce tincidunt, nunc quis condimentum blandit, urna elit mollis leo, et pulvinar sapien velit tempor tortor. 
-                    Vestibulum lectus augue, blandit at augue ac, lobortis tempus turpis. Sed turpis ligula, rhoncus sed eros sed, consequat pharetra dolor. 
-                    Nullam rutrum turpis eros, ac bibendum lorem ultricies in. Maecenas et odio neque.
-                    
+                    Transform lives of meritorious students hailing from socio-economically weaker sections by supporting their higher education.
                 <br></p>
             </div>
         </div>
